- Gitignore updated with minor details. - Readme created. - License added.

--- a/.gitignore
+++ b/.gitignore
@@ -235,4 +235,9 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 
+#############################
+# Not Visual Studio related #
+#############################
+
+# Compression library used by txmLoader
 zlib*
