- Added capability of adding gameobjects to the map, based on their map names (this has required to create a map in world where to an object name (string) corresponds the instantiation method. This is a simple mechanism to emulate reflection... well, sort of. - Added 2 test classes, Luigi and Door, just to see. They'll go away. - Added GameObject class that serves as a base class for future entities.

--- a/Game Engine 2D/GameEngine2D.vcxproj
+++ b/Game Engine 2D/GameEngine2D.vcxproj
@@ -128,13 +128,16 @@
     <ClCompile Include="ComponentBase.cpp" />
     <ClCompile Include="Constants.cpp" />
     <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="Door.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EntityFlag.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="EntityUtils.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="FPS.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="InputSystem.cpp" />
+    <ClCompile Include="Luigi.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -170,14 +173,17 @@
     <ClInclude Include="ComponentBase.hpp" />
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="Controller.hpp" />
+    <ClInclude Include="Door.hpp" />
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="EntityFlag.hpp" />
     <ClInclude Include="EntityManager.hpp" />
     <ClInclude Include="EntityUtils.hpp" />
     <ClInclude Include="Event.hpp" />
     <ClInclude Include="FPS.hpp" />
+    <ClInclude Include="GameObject.hpp" />
     <ClInclude Include="GameObjectType.hpp" />
     <ClInclude Include="InputSystem.hpp" />
+    <ClInclude Include="Luigi.hpp" />
     <ClInclude Include="Movement.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Renderer.hpp" />
