- World is now owned by engine and it's static for technical reasons. - A ClassRegistry class has been added to automatically add at startup all gameobjects that have the right macro in.

--- a/Game Engine 2D/GameEngine2D.vcxproj
+++ b/Game Engine 2D/GameEngine2D.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Appearance.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ClassRegistry.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionDetectionUtils.cpp" />
     <ClCompile Include="CollisionEvent.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="Luigi.hpp" />
     <ClInclude Include="Movement.hpp" />
     <ClInclude Include="Player.hpp" />
+    <ClInclude Include="ClassRegistry.hpp" />
     <ClInclude Include="Renderer.hpp" />
     <ClInclude Include="ResourcePath.hpp" />
     <ClInclude Include="stdafx.h" />
