--- a/Game Engine 2D/GameEngine2D.vcxproj.filters
+++ b/Game Engine 2D/GameEngine2D.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
@@ -39,6 +35,28 @@
     <Filter Include="Header Files\Entities\Systems">
       <UniqueIdentifier>{83bd2132-b49f-41a3-b483-d14e638ddaad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GameObjects">
+      <UniqueIdentifier>{b17000d4-31cd-4dce-b9db-b48ce8a1c880}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Events">
+      <UniqueIdentifier>{ccd89afd-3dd2-44cf-9a86-d82533b17c7e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Events\CustomEvents">
+      <UniqueIdentifier>{1c260a08-1ddc-4338-88cd-a1c66eac1a3c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Entities\Animations">
+      <UniqueIdentifier>{81a7e962-68f4-4951-a28c-d5db3da2c11a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Entities\BT basic nodes">
+      <UniqueIdentifier>{73d83455-5f87-426e-8caa-6ae7bf841aa2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Entities\BT basic nodes\Composite">
+      <UniqueIdentifier>{e47e5b84-15bc-463b-8529-577662296a72}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
     <Filter Include="Source Files\Utils">
       <UniqueIdentifier>{85d41c4c-58ea-4708-a05f-d4889ace103e}</UniqueIdentifier>
     </Filter>
@@ -51,43 +69,40 @@
     <Filter Include="Source Files\Entities\Systems">
       <UniqueIdentifier>{491495fc-1955-4dec-b2f0-bc817f7c65c1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\GameObjects">
-      <UniqueIdentifier>{b17000d4-31cd-4dce-b9db-b48ce8a1c880}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\GameObjects">
-      <UniqueIdentifier>{80e5c6cc-a914-478a-b7b2-1c4cd5beba36}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Events">
-      <UniqueIdentifier>{ccd89afd-3dd2-44cf-9a86-d82533b17c7e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Events">
-      <UniqueIdentifier>{f16942d9-edfa-4b15-a349-cabf5ea0b68a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Events\CustomEvents">
-      <UniqueIdentifier>{1c260a08-1ddc-4338-88cd-a1c66eac1a3c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Events\CustomEvents">
-      <UniqueIdentifier>{b9b419b3-0b5f-489c-8e20-0d2239a7273c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Entities\Animations">
-      <UniqueIdentifier>{81a7e962-68f4-4951-a28c-d5db3da2c11a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Entities\Animations">
       <UniqueIdentifier>{39f7bbe4-9c2c-4880-aeac-9efc192fc67a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Entities\BT basic nodes">
-      <UniqueIdentifier>{73d83455-5f87-426e-8caa-6ae7bf841aa2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\GameObjects\BTs">
-      <UniqueIdentifier>{155e56e8-3ab0-41ba-9691-504f69768f28}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Entities\BT basic nodes\Composite">
-      <UniqueIdentifier>{e47e5b84-15bc-463b-8529-577662296a72}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Entities\BT basic nodes">
       <UniqueIdentifier>{e99c8222-7c57-46cc-8ca8-c32d67491ada}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\GameObjects\BTs">
+    <Filter Include="Source Files\GameObjects">
+      <UniqueIdentifier>{80e5c6cc-a914-478a-b7b2-1c4cd5beba36}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Events">
+      <UniqueIdentifier>{f16942d9-edfa-4b15-a349-cabf5ea0b68a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Events\CustomEvents">
+      <UniqueIdentifier>{b9b419b3-0b5f-489c-8e20-0d2239a7273c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test">
+      <UniqueIdentifier>{fde115b7-0c01-4a27-aad8-1916c0872791}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Header Files">
+      <UniqueIdentifier>{3c42597d-6b9f-4053-89de-cace4fdccbb0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Header Files\GameObjects">
+      <UniqueIdentifier>{59a1d35e-5a5c-4a81-b5f1-3ea63fc8fdce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Header Files\GameObjects\BTs">
+      <UniqueIdentifier>{155e56e8-3ab0-41ba-9691-504f69768f28}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Source Files">
+      <UniqueIdentifier>{ef755493-b5fe-40f4-9395-9143b3be2769}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Source Files\GameObjects">
+      <UniqueIdentifier>{222dfa23-e2cc-431c-aec0-1b3bf63c0f79}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Test\Source Files\GameObjects\BTs">
       <UniqueIdentifier>{78d23b0f-4d27-4203-9bc6-ec62a09d39fe}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -206,15 +221,6 @@
     <ClCompile Include="EntityUtils.cpp">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
-    <ClCompile Include="Luigi.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="Door.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
@@ -249,10 +255,19 @@
       <Filter>Source Files\Entities\BT basic nodes</Filter>
     </ClCompile>
     <ClCompile Include="Patrolling.cpp">
-      <Filter>Source Files\GameObjects\BTs</Filter>
+      <Filter>Game Test\Source Files\GameObjects\BTs</Filter>
     </ClCompile>
     <ClCompile Include="Repeater.cpp">
       <Filter>Source Files\Entities\BT basic nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="Door.cpp">
+      <Filter>Game Test\Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Luigi.cpp">
+      <Filter>Game Test\Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Game Test\Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -388,15 +403,6 @@
     <ClInclude Include="GameObject.hpp">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="Luigi.hpp">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.hpp">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Door.hpp">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="ClassRegistry.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -428,10 +434,19 @@
       <Filter>Header Files\Entities\BT basic nodes\Composite</Filter>
     </ClInclude>
     <ClInclude Include="Patrolling.hpp">
-      <Filter>Header Files\GameObjects\BTs</Filter>
+      <Filter>Game Test\Header Files\GameObjects\BTs</Filter>
     </ClInclude>
     <ClInclude Include="Repeater.hpp">
       <Filter>Header Files\Entities\BT basic nodes\Composite</Filter>
+    </ClInclude>
+    <ClInclude Include="Door.hpp">
+      <Filter>Game Test\Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Luigi.hpp">
+      <Filter>Game Test\Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.hpp">
+      <Filter>Game Test\Header Files\GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
